<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".AboutGame">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Developed By "
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10sp"
        />

    <ImageView
        android:paddingTop="10dp"
        android:layout_width="220dp"
        android:layout_height="250dp"
        android:src="@drawable/mine"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/myName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingLeft="10sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:paddingLeft="10sp"
        android:paddingTop="20dp"
        android:text="@string/myEmail"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/linkedInBttn"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:text="@string/myLinkedIn"
        android:paddingLeft="10sp"
        android:textStyle="bold" />

</LinearLayout>